--- a/ThemePark/ThemePark.csproj
+++ b/ThemePark/ThemePark.csproj
@@ -1,13 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.3" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.3" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Core"   />
+    <PackageReference Include="Microsoft.EntityFrameworkCore"   />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer"   />
   </ItemGroup>
 
 
