--- a/ThemePark/appsettings.json
+++ b/ThemePark/appsettings.json
@@ -7,6 +7,10 @@
     }
   },
   "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Alias": "samples",
+    "ThemeParkConnection": "Server=(localdb)\\mssqllocaldb;Database=ThemePark;Trusted_Connection=True;ConnectRetryCount=0"
+  },
   "Kestrel": {
     "EndPoints": {
       "Http": {
